Created a three colums section shoeing clients' reviews

--- a/style.css
+++ b/style.css
@@ -264,3 +264,10 @@ header>a {
     display: flex;
     justify-content: space-between;
 }
+
+/* Reviewa */
+.reviews {
+    padding: 100px;
+    display: flex;
+    background-color: #d5bdda;
+}
