Increased the height of the 'contact me' divs

--- a/style.css
+++ b/style.css
@@ -343,7 +343,7 @@ header>a {
 .cm-wrapper .left-div {
     background-color: #d5bdda;
     width: 40%;
-    height: 550px;
+    height: 580px;
     border-radius: 15px;
     box-shadow: 2px 5px 20px grey;
     padding: 35px;
@@ -400,7 +400,7 @@ header>a {
 .right-div {
     background-color: #d5bdda;
     box-shadow: 2px 5px 20px grey;
-    height: 550px;
+    height: 58`0px;
     padding: 15px;
     width: 60%;
     border-radius: 15px;
