--- a/style.css
+++ b/style.css
@@ -400,7 +400,7 @@ header>a {
 .right-div {
     background-color: #d5bdda;
     box-shadow: 2px 5px 20px grey;
-    height: 58`0px;
+    height: 580px;
     padding: 15px;
     width: 60%;
     border-radius: 15px;
@@ -444,4 +444,15 @@ textarea {
     border: 3px solid #ceaad5;
     border-radius: 15px;
     padding: 10px;
+    margin-bottom: 15px;
+}
+
+form a {
+    background-color: rgb(104, 17, 185);
+    padding: 10px;
+    text-decoration: none;
+    color: #fff;
+    border-radius: 50px;
+    display: flex;
+    justify-content: center;
 }
