--- a/style.css
+++ b/style.css
@@ -244,40 +244,10 @@ header>a {
     height: 800px;
     border-top-left-radius: 130px;
     border-bottom-right-radius: 130px;
-    padding: 90px;
+    padding: 90px 120px;
 }
 
-.portfolio .container>h2 {
-    text-align: center;
-    color: #fff;
-    font-size: 35px;
-    font-family:'Times New Roman', Times, serif;
-    margin-bottom: 20px;
-}
 
-.portfolio .container>p {
-    color: #fff;
-    text-align: center;
-    margin-bottom: 50px;
-}
-
-.grid {
-    
-}
-
-.grid .mini-imgs {
-    display: flex;
-    justify-content: space-between;
-}
-
-.mini-imgs #d-1 {
-    display: ;
-}
-
-.mini-imgs #d-2 {
-    display: flex;
-    gap: 15px;
-}
 
 /* Reviews */
 .reviews {
