--- a/style.css
+++ b/style.css
@@ -252,6 +252,10 @@ header>a {
     gap: 50px;
 }
 
+#container h2 {
+    color: #fff;
+}
+
 .right-p-div .card {
     background: #b078c8;
     margin: 0 15px 15px 0;
@@ -262,6 +266,15 @@ header>a {
 
 .right-p-div .card img {
     width: 100%;
+    border-radius: 10px;
+}
+
+#bubu {
+    width: 200px;
+}
+
+.card h3 {
+    padding: 10px 0;
 }
 
 .right-p-div .card a {
@@ -271,6 +284,9 @@ header>a {
     color: #000;
     border-radius: 7px;
     font-weight: 500;
+    display: flex;
+    justify-content: center;
+    width: 150px;
 }
 
 .right-p-div .top-div {
